<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="E_RobotStateTM" Id="{18e32e38-b246-4929-b93a-0d75c5d81c23}">
    <Declaration><![CDATA[TYPE E_RobotStateTM :
(
	READY,
	PREPARE,
	SEND
) UDINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>